--- a/assets/sass/_dfd-colors.scss
+++ b/assets/sass/_dfd-colors.scss
@@ -1,14 +1,15 @@
-// stylelint-disable color-no-hex, color-named, value-list-max-empty-lines
+// stylelint-disable color-no-hex, value-list-max-empty-lines
 // stylelint-disable scss/dollar-variable-colon-space-after, scss/dollar-variable-empty-line-before
 
 // Base colors.
-$black:                 lighten(#000, 2%); // off-black
-$nearblack:             lighten($black, 20%); // #333
+$black:                 #000; // black
+$nearblack:             lighten($black, 2%); // off-black
+$grey-darker:           lighten($black, 20%); // #333
 $grey-dark:             lighten($black, 30%);
 $grey-lessdark:         lighten($black, 40%);
 $grey-medium:           lighten($black, 50%);
 $grey:                  lighten($black, 60%); // #999
-$grey-light:            lighten($black, 80%); // #ccc
+$grey-light:            lighten($black, 85%);
 $grey-extra-light:      lighten($black, 93.33%); // #eee
 $nearwhite:             lighten($black, 97%); // #f7f7f7
 $white:                 #fff;
@@ -19,8 +20,9 @@ $green:                 #43a808;
 $yellow:                #fd0;
 
 $brand:                 $grey-dark;
-$brand-alt:             $grey;
+$brand-alt:             $grey-lessdark;
 $brand-light:           $grey-light;
+$brand-medium:          $grey-medium;
 $brand-dark:            $nearblack;
 
 // Colour map.
@@ -28,6 +30,7 @@ $colors: (
   brand:                  $brand,
   brand-alt:              $brand-alt,
   brand-light:            $brand-light,
+  brand-medium:           $brand-medium,
   brand-dark:             $brand-dark,
 
   text:                   $nearblack,
@@ -54,9 +57,9 @@ $colors: (
   autocomplete-select-bg: $blue,
 
   body-bg:                $nearwhite,
-  header-bg:              $brand-dark,
-  footer-bg:              $brand-dark,
-  backdrop:               $grey-extra-light,
+  header-bg:              $brand,
+  footer-bg:              $brand,
+  backdrop:               $grey-light,
 
   mobile-menu:            $brand-dark,
   mobile-menu-cover:      rgba($black, .2),
