Avoid including certain elements in print version
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/assets/sass/_dfd-zen.scss
+++ b/assets/sass/_dfd-zen.scss
@@ -780,3 +780,17 @@ a {
     color: var(--color-brand-dark);
   }
 }
+
+header.header.layout {
+  &__header {
+    @extend %print-none;
+  }
+}
+
+h1 + .submitted.meta {
+  @extend %print-none;
+}
+
+.content-dates.meta {
+  @extend %print-none;
+}
