--- a/layouts/partials/page-content.html
+++ b/layouts/partials/page-content.html
@@ -3,7 +3,7 @@
 {{ with .Content }}
 <div class="content">
   {{ if and ($pctx.Param "toc") (not ($pctx.HasShortcode "details-toc")) }}
-  <details>
+  <details class="print-none">
     <summary>What is in this article</summary>
     <div class="toc">
     {{- $pctx.TableOfContents -}}
