Move DFD variable overrides into a separate file
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/assets/sass/_init.scss
+++ b/assets/sass/_init.scss
@@ -9,6 +9,7 @@
 @import 'colors';
 @import 'dfd-colors';
 @import 'variables';
+@import 'dfd-variables';
 @import 'extra';
 
 // Mixins and functions.
