Use common page-content partial
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,30 +6,8 @@
 {{ if $.Param "submitted" | default false }}{{ partial "submitted.html" . }}{{ end -}}
 {{ if .Params.tags }}{{ partial "tags.html" . }}{{ end -}}
 </header>
-<div class="content">
-{{ if and (.Param "toc") (not (.HasShortcode "details-toc")) }}
-<details class="print-none">
-  <summary>What is in this article</summary>
-  <div class="toc">
-  {{- .Page.TableOfContents -}}
-  </div>
-</details>
-{{ end }}
-{{ .Content }}
-</div>
 
-{{ $pctx := . }}
-{{ with .Param "page_endnote" -}}
-<div class="content content--endnote">
-{{ . | $pctx.RenderString }}
-</div>
-{{ end -}}
-
-<div class="content content--bottom">
-{{ if ne .Lastmod .PublishDate }}{{ partial "dates.html" . }}{{ end -}}
-
-{{ if $.Param "relatedposts" | default false }}{{ partial "related.html" . }}{{ end -}}
-</div>
+{{- partial "page-content.html" . }}
 </article>
 </main>
 {{ end }}
