--- a/layouts/partials/walk.html
+++ b/layouts/partials/walk.html
@@ -10,7 +10,7 @@
 {{- range $pages -}}
   {{- $pageMetadata := .Title }}
   <li{{ if .IsSection }} class="section-list-item"{{ end }}>
-    <a{{ if .IsSection }} class="section-link"{{ end }} href="{{ .RelPermalink }}"><span>{{ .Title -}}</span>
+    <a{{ if .IsSection }} class="section-link"{{ end }} href="{{ .RelPermalink }}"><span>{{ replaceRE `^(.+) \[.+\]$` "$1" .Title -}}</span>
   {{- if or .Pages .Sections -}}
     {{- $numBelow := len (union .Pages .Sections) -}}
     {{- if and $showNumBelow (gt $numBelow 1) (gt $curDepth 1) }} ({{ $numBelow }}){{ end }}
