--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,10 @@
 <main class="main layout__main">
 <article class="single-view{{ with .Section }} single-view--{{ . | urlize }}{{ end }}">
 <header>
-<h1 class="title {{ if $.Param "submitted" | default false }}mb--xxs{{ end }}">{{ .Title }}</h1>
+<h1 class="title {{ if $.Param "submitted" | default false }}mb--xxs{{ end }}">{{ replaceRE  `^(.+) \[.+\]$` "$1" .Title }}</h1>
+{{- if findRE `^.+ \[.+\]$` .Title }}
+<p class="subtitle {{ if $.Param "submitted" | default false }}mb--xxs{{ end }}">{{ replaceRE `^.+ \[(.+)\]$` "$1" .Title }}</p>
+{{- end -}}
 {{ if $.Param "submitted" | default false }}{{ partial "submitted.html" . }}{{ end -}}
 {{ if .Params.tags }}{{ partial "tags.html" . }}{{ end -}}
 </header>
